summative.moria.Moria.scala.code
def trouverBiscuit(){
  while ((!estSurBiscuit)||(!estFaceMur)){
    avance()
  }
  prendBiscuit()
  retourne()
  while (!estSurBiscuit){
    avance()
  }
  recule()
}

def Sortir(){
  while (!trouverBiscuit()){
    
  }
}